5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1578_996.log
== SUBMITION (2019-03-11 19:44:05) 
-- CODE:
print(*****)
-- EXECUTION TIME:
0.130906
-- ERROR:
  File "/home/codebench/codes/1578/996/main.py", line 1
    print(*****)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:44:08) 
-- CODE:
print(*****)
-- ERROR:
File "XXXX", line 1
    print(*****)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:45:58) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
-- OUTPUT:
*****
(* o o *)
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:46:12) 
-- CODE:
print(" *****")
print("(* o o *)")
print("* ^ *")
-- OUTPUT:
*****
(* o o *)
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:46:19) 
-- CODE:
print("  *****")
print("(* o o *)")
print("* ^ *")
-- OUTPUT:
*****
(* o o *)
* ^ *
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:47:40) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
(* o o *)
* ^ *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:48:01) 
-- CODE:
print("   *****")
print("(* o o *)")
print("* ^ *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
(* o o *)
* ^ *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:48:20) 
-- CODE:
print("   *****")
print("(* o o *)")
print("*  ^  *")
print(" --- ")
print("*****")
-- EXECUTION TIME:
0.118527
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
 --- 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:48:50) 
-- CODE:
print("   *****")
print("(* o  o *)")
print("*  ^  *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
(* o  o *)
*  ^  *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:49:13) 
-- CODE:
print("   *****")
print(" (* o  o *)")
print("*  ^  *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
 (* o  o *)
*  ^  *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:49:28) 
-- CODE:
print("    *****")
print(" (* o  o *)")
print("*  ^  *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
 (* o  o *)
*  ^  *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:13) 
-- CODE:
print("*****")
print("(* o  o *)")
print("*  ^  *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
(* o  o *)
*  ^  *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:50:23) 
-- CODE:
print("*****")
print("(* o  o *)")
print("*  ^  *")
print(" --- ")
print("*****")
-- EXECUTION TIME:
0.183153
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
*  ^  *
 --- 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:26) 
-- CODE:
print("*****")
print("(* o  o *)")
print("*  ^  *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
(* o  o *)
*  ^  *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:50:55) 
-- CODE:
print("  *****")
print("(* o  o *)")
print(" *  ^  *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
(* o  o *)
 *  ^  *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:09) 
-- CODE:
print("  *****")
print("(* o  o *)")
print("  *  ^  *")
print(" --- ")
print("*****")
-- OUTPUT:
*****
(* o  o *)
  *  ^  *
 --- 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:27) 
-- CODE:
print("  *****")
print("(* o  o *)")
print("  *  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o  o *)
  *  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:31) 
-- CODE:
print("  *****")
print("(* o  o *)")
print("  *  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o  o *)
  *  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:41) 
-- CODE:
print("  *****")
print("(* o  o *)")
print("  *  ^  *")
print(" * --- *")
print("*****")
-- OUTPUT:
*****
(* o  o *)
  *  ^  *
 * --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:51:48) 
-- CODE:
print("  *****")
print("(* o  o *)")
print("  *  ^  *")
print("  * --- *")
print("*****")
-- OUTPUT:
*****
(* o  o *)
  *  ^  *
  * --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 19:52:00) 
-- CODE:
print("  *****")
print("(* o  o *)")
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- OUTPUT:
*****
(* o  o *)
  *  ^  *
  * --- *
   *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 19:52:08) 
-- CODE:
print("  *****")
print("(* o  o *)")
print("  *  ^  *")
print("  * --- *")
print("   *****")
-- EXECUTION TIME:
0.141988
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o  o *)
  *  ^  *
  * --- *
   *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
